--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,21 +12,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Konkura">
         <activity
-            android:name=".SplashActivity"
-            android:exported="true" >
+            android:name=".reshte.EnsaniActivity"
+            android:exported="false" />
 
+        <activity
+            android:name=".reshte.RiaziActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true" />
     </application>
 
 </manifest>
