--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,9 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Konkura">
         <activity
+            android:name=".PdfActivity"
+            android:exported="false" />
+        <activity
             android:name=".reshte.EnsaniActivity"
             android:exported="false" />
-
         <activity
             android:name=".reshte.RiaziActivity"
             android:exported="false" />
